Bug 511290 - [Designer][test] tests on cpp projects are not called
* changes:
  - removing test suite (from first patch set)
  - removing pom configuration (from first patch set)
  - cleanup and simplification of test (removal of unused folder models, use of modelSetFixture)
  - wait that editor becomes active => results are now reproducible
  - fix build properties
  - renamed ExpectedModel folder into expectedResult

*validation
  -checks that the tests are well executed

Change-Id: I362fcfb49430158a2ff74d561a60aa33bec295c9